--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/talentlessguy/sign-tx.git"
+    "url": "git+https://github.com/talentlessguy/send-tx.git"
   },
   "keywords": [
     "eth",
@@ -21,14 +21,15 @@
     "blockchain",
     "ethers",
     "sign-tx",
-    "tx"
+    "tx",
+    "transactions"
   ],
   "author": "v1rtl",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/talentlessguy/sign-tx/issues"
+    "url": "https://github.com/talentlessguy/send-tx/issues"
   },
-  "homepage": "https://github.com/talentlessguy/sign-tx#readme",
+  "homepage": "https://github.com/talentlessguy/send-tx#readme",
   "devDependencies": {
     "@rollup/plugin-typescript": "^8.2.1",
     "ethers": "^5.4.1",
