--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -2,4 +2,4 @@
 
 ko_fi: v1rtl
 liberapay: v1rtl
-custom: ["https://zapper.fi/dashboard?address=0xd3b282e9880cdcb1142830731cd83f7ac0e1043f"]
+custom: ["https://v1rtl.site/support"]
