--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "send-tx",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Sign & send Ethereum transactions with ease.",
   "type": "module",
   "exports": "./dist/index.js",
@@ -31,16 +31,13 @@
   },
   "homepage": "https://github.com/talentlessguy/send-tx#readme",
   "devDependencies": {
-    "@rollup/plugin-typescript": "^8.2.1",
-    "ethers": "^5.4.1",
-    "rollup": "^2.53.1",
-    "tslib": "^2.3.0",
-    "typescript": "^4.3.5"
-  },
-  "peerDependencies": {
-    "ethers": "^5.4.1"
+    "@rollup/plugin-typescript": "^8.2.5",
+    "rollup": "^2.56.3",
+    "tslib": "^2.3.1",
+    "typescript": "^4.4.3"
   },
   "dependencies": {
-    "@ethereumjs/tx": "^3.3.0"
+    "@ethereumjs/tx": "^3.3.0",
+    "@ethersproject/bytes": "^5.4.0"
   }
 }
